--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,17 @@
 	<string name="moderate_string">Moderate</string>
 	<string name="high_string">High</string>
 	<string name="login_string">Submit</string>
+	
+	<string name="risk_assessment_string">Risk Assessment</string>
+	<string name="report_1_string">Report 1</string>
+	<string name="report_2_string">Report 2</string>
+
+	<string name="report_1_string">Report 1</string>
+	<string name="type_of_hazard__string">Type of hazard:</string>
+	<string name="description__string">Description:</string>
+	<string name="severity_level__string">Severity Level:</string>
+	<string name="mark_as_complete_string">Mark as complete</string>
+	<string name="edit_string">Edit</string>
+	<string name="login_string">Submit</string>
 
 </resources>
